Update 1. Pyth Oracle Integration.md

--- a/1. Pyth Oracle Integration.md
+++ b/1. Pyth Oracle Integration.md
@@ -81,6 +81,6 @@ Asset: xSUSHI 0x8798249c2E607446EfB7Ad49eC89dD1865Ff4272, Price: 448923470216223
 
 ### Forced price "1337"
 
-![[__media/Pasted image 20240129165324.png]]
+![works](__media/Pasted image 20240129165324.png)
 **It works!**
 
